<resources>
    <string name="app_name">Test</string>
    <string name="logo_text">Just text</string>
    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Go to new page</string>
    <string name="button5">Go back</string>
    <string name="btn">You already click</string>
    <string name="exit">Exit</string>
    <string name="switch_cl">Click on me</string>
</resources>